option('with-mpi', type : 'boolean', value : false, description: 'Compile with MPI')
option('static-cpp-libs', type: 'boolean', value: false, description: 'Link in libgcc and libstdc++ statically')
option('extra-tools', type: 'boolean', value: true, description: 'Build extra tools')
option('cpu-arch', type: 'string', value: 'baseline', description: 'Enable CPU instructions for specific architecture')